tests/ui/implied-bounds/issue-100690.stderr
error[E0277]: expected a `FnOnce<(&mut UIView<'_, T>,)>` closure, found `F`
  --> $DIR/issue-100690.rs:37:23
   |
LL |         real_dispatch(f)
   |         ------------- ^ expected an `FnOnce<(&mut UIView<'_, T>,)>` closure, found `F`
   |         |
   |         required by a bound introduced by this call
   |
   = note: expected a closure with arguments `(&mut UIView<'a, T>,)`
              found a closure with arguments `(&mut UIView<'_, T>,)`
note: required by a bound in `real_dispatch`
  --> $DIR/issue-100690.rs:9:8
   |
LL | fn real_dispatch<T, F>(f: F) -> Result<(), io::Error>
   |    ------------- required by a bound in this function
...
LL |     F: FnOnce(&mut UIView<T>) -> Result<(), io::Error> + Send + 'static,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `real_dispatch`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
